# findimagespdf

./: .gitignore  README.md  build_release.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml
findimagespdf/: version.py
tests/: samples.py  test_pdffile.py
